# openhands

./: .gitignore  AGENTS.md  pyproject.toml  release-please-config.cloud.json  release-please-config.json
enterprise/: Dockerfile  README.md  pyproject.toml  run_budget_maintenance.py  run_maintenance_tasks.py  saas_server.py
enterprise/dev_config/python/: .pre-commit-config.yaml
enterprise/enterprise_local/: convert_to_env.py
enterprise/integrations/: manager.py  models.py  resolver_context.py  resolver_org_router.py  store_repo_utils.py  stripe_service.py  types.py  utils.py  v1_utils.py
enterprise/integrations/azure_devops/: azure_devops_manager.py  azure_devops_service.py  azure_devops_v1_callback_processor.py  azure_devops_view.py
enterprise/integrations/bitbucket/: bitbucket_manager.py  bitbucket_service.py  bitbucket_v1_callback_processor.py  bitbucket_view.py
enterprise/integrations/bitbucket_data_center/: bitbucket_dc_manager.py  bitbucket_dc_service.py  bitbucket_dc_v1_callback_processor.py  bitbucket_dc_view.py
enterprise/integrations/github/: data_collector.py  github_manager.py  github_service.py  github_v1_callback_processor.py  github_view.py
enterprise/integrations/gitlab/: gitlab_manager.py  gitlab_service.py  gitlab_v1_callback_processor.py  gitlab_view.py  (+1 more)
enterprise/migrations/: env.py
enterprise/scripts/: seed_conversation_data.py  setup_and_seed.py  standalone_server.py
enterprise/server/: config.py  constants.py  email_validation.py  logger.py  middleware.py  rate_limit.py
enterprise/storage/: __init__.py  agent_profile_resolution.py  api_key.py  api_key_store.py  auth_token_store.py  auth_tokens.py  base.py  billing_session.py  bitbucket_dc_webhook.py  bitbucket_webhook.py  conversation_work.py  default_org_service.py  device_code.py  device_code_store.py  encrypt_utils.py  feedback.py  github_app_installation.py  gitlab_webhook.py  gitlab_webhook_store.py  jira_conversation.py  jira_dc_conversation.py  jira_dc_integration_store.py  jira_dc_user.py  jira_dc_workspace.py  jira_integration_store.py  jira_user.py  jira_workspace.py  linear_conversation.py  linear_integration_store.py  linear_user.py  linear_workspace.py  lite_llm_manager.py  maintenance_task.py  offline_token_store.py  openhands_pr.py  openhands_pr_store.py  org.py  org_app_settings_store.py  org_budget_settings.py  org_budget_store.py  (+36 more)
enterprise/sync/: clean_proactive_convo_table.py  enrich_user_interaction_data.py  install_gitlab_webhooks.py  resend_keycloak.py
enterprise/utils/: identity.py
(+737 files in other folders)
