[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "enterprise_server"
version = "0.0.1"
description = "Deploy OpenHands"
authors = [ "OpenHands" ]
license = "POLYFORM"
readme = "README.md"
repository = "https://github.com/OpenHands/OpenHands"
packages = [
  { include = "server" },
  { include = "storage" },
  { include = "sync" },
  { include = "integrations" },
]

[tool.poetry.dependencies]
python = "^3.12,<3.14"
openhands-ai = { path = "../", develop = true }
authlib = "1.7.2"
gspread = "6.2.1"
alembic = "1.18.5"
cloud-sql-python-connector = "1.20.4"
psycopg2-binary = "2.9.12"
pg8000 = "1.31.5"
stripe = "15.3.0"
python-json-logger = "4.1.0"
python-keycloak = "7.1.1"
asyncpg = "0.31.0"
sqlalchemy = { extras = [ "asyncio" ], version = "2.0.51" }
resend = "2.32.2"
tenacity = "9.1.4"
slack-sdk = "3.43.0"
ddtrace = "4.10.6"                                          #pin to avoid yanked version 3.12.4
posthog = "7.21.2"
limits = "5.8.0"
coredis = "5.7.0"
httpx = "0.28.1"
scikit-learn = "1.9.0"
shap = "0.52.0"
google-cloud-recaptcha-enterprise = "1.32.0"
# Dependencies previously only in Dockerfile, now managed via poetry.lock
prometheus-client = "0.25.0"
pandas = "3.0.3"
numpy = "2.4.4"
mcp = "1.28.1"
pillow = "12.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.15.20"
mypy = "2.1.0"
pre-commit = "4.6.0"
build = "1.5.0"
types-requests = "2.33.0.20260518"

[tool.poetry.group.test.dependencies]
pytest = "9.1.1"
pytest-cov = "7.1.0"
pytest-asyncio = "1.4.0"
pytest-forked = "1.6.0"
pytest-xdist = "3.8.0"
flake8 = "7.3.0"
freezegun = "1.5.5"
openai = "2.33.0"
opencv-python = "4.13.0.92"
pandas = "3.0.3"
reportlab = "5.0.0"
gevent = "26.5.0"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"

[tool.autopep8]
# autopep8 fights with mypy on line length issue
ignore = [ "E501" ]

[tool.black]
# prevent black (if installed) from changing single quotes to double quotes
skip-string-normalization = true

[tool.ruff]
lint.select = [ "D" ]
# ignore warnings for missing docstrings
lint.ignore = [ "D1" ]
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
relative_files = true
omit = [ "tests/*" ]

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { openhands-agent-server = false, openhands-sdk = false, openhands-tools = false }
